# mealie-planner

./: .env.example  .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  app.py  banned_recipes.example.txt  benchmark_meal_plan_delete.py  dietary_rules.example.txt  docker-compose.yml  email_notifier.py  meal_planner.py  plan.txt  plan_generator.py  profile_substeps.py  pyproject.toml  requirements.txt  setup.py
mealie_planner/: ai_client.py  chat_session.py  config.py  database.py  deepseek_client.py  email_notifier.py  exceptions.py  gemini_client.py  maintenance.py  mcp_agent.py  mcp_server.py  mealie_client.py  models.py  parsers.py  plan_generator.py  recipe_crawler.py  recipe_nutrition.py  shopping_sync.py  startup_check.py  submodule_check.py  unified_client.py  utils.py
scripts/: README.md  add_honey_staple.py  benchmark.py  check_current_ingredients.py  check_nutrition_source.py  clear_mealie.py  clear_recipe_api_sources.py  debug_daily_email.py  debug_plan_generation.py  email_dev.py  full_wipe_mealie.py  import_sample_recipes.py  list_plans.py  migrate_to_zones.py  profile_plan_generation.py  profile_substeps.py  reconstruct_prep_notes.py  recreate_sandwiches.py  send_test_saturday_report.py  setup_runner.sh  setup_wizard.py  test_breakfasts.py  test_sqlite_locking.py  test_thinking_budget.py  update_mcp_server.sh
static/: manifest.json  sw.js
templates/: index.html
tests/: test_admin_settings.py  test_client.py  test_nutrition_cache.py  test_planning_and_sync.py  test_pydantic_integration.py  test_recipe_api.py  test_routes.py  test_utils.py
(+41 files in other folders)
